force-app/main/default/objects/malive__MALiveDriverAssignment__c/malive__MALiveDriverAssignment__c.object-meta.xml
<CustomObject>
    <label>MA Live Driver Assignment</label>
    <nameField>
        <label>MA Live Driver Assignment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MA Live Driver Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>