force-app/main/default/objects/malive__MALiveDriverAssignment__c/fields/malive__Driver__c.field-meta.xml
<CustomField>
    <fullName>malive__Driver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Driver</label>
    <referenceTo>malive__MALiveDriver__c</referenceTo>
    <relationshipName>DriverAssignments</relationshipName>
    <type>Lookup</type>
</CustomField>