force-app/main/default/objects/malive__MALiveDriverAssignment__c/fields/malive__MALiveAsset__c.field-meta.xml
<CustomField>
    <fullName>malive__MALiveAsset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MA Live Asset</label>
    <referenceTo>malive__MALiveAsset__c</referenceTo>
    <relationshipName>DriverAssignments</relationshipName>
    <type>Lookup</type>
</CustomField>