force-app/main/default/objects/malive__MALiveDriverAssignment__c/fields/malive__MALiveIoTDevice__c.field-meta.xml
<CustomField>
    <fullName>malive__MALiveIoTDevice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MA Live IoT Device</label>
    <referenceTo>malive__IoTDevice__c</referenceTo>
    <relationshipLabel>MA Live Driver Assignments</relationshipLabel>
    <relationshipName>MALiveDriverAssignments</relationshipName>
    <type>Lookup</type>
</CustomField>