force-app/main/default/objects/malive__MALiveDriverAssignment__c/fields/malive__StartDateTime__c.field-meta.xml
<CustomField>
    <fullName>malive__StartDateTime__c</fullName>
    <label>Start Date/Time</label>
    <type>DateTime</type>
</CustomField>